<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">guzzl</string>
    <string name="action_settings">Settings</string>
    <string name="plan_trip">Plan a Trip</string>
    <string name="free_mode">Free Mode</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="car_picker_title">Select Car</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="mpg_hw">Est. MPG Highway</string>
    <string name="mpg_city">Est. MPG City</string>
    <string name="modify_car">Change Car</string>
    <string name="modify_car_manual">Manual Fuel Entry</string>
    <string name="fuel_size">Fuel Size</string>
    <string name="slider_starting_value">0</string>
    <string name="mpg">MPG</string>
    <string name="gal">GAL</string>
    <string name="miles">Miles</string>
    <string name="fuel_remaining">Fuel Gauge Reading</string>
    <string name="modify_fuel">Modify Fuel</string>
    <string name="notification_text">Approximately %1$s Miles of Fuel Left</string>
    <string name="notification_title">Low Fuel Alert</string>
    <string name="action_search">Search</string>
    <string name="description_range">Fuel Range</string>
    <string name="description_fuel">Fuel Remaining</string>
    <string name="fuel_stop">Fuel Stop</string>

</resources>
