<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_modify_car"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/modify_car"/>
    <item
        android:id="@+id/menu_modify_fuel"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/modify_fuel" />
    <item
        android:id="@+id/menu_fuel_stop"
        android:showAsAction="never"
        android:orderInCategory="300"
        android:title="@string/fuel_stop" />

    <item
        android:id="@+id/menu_action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.support.v7.widget.SearchView"/>



</menu>
