<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_gravity="center"
    android:background="@drawable/background_fragment">

    <TextView
        android:id="@+id/car_picker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/modify_car_manual"
        android:textColor="@color/text_silver"
        android:textSize="22sp" />

    <FrameLayout
        android:id="@+id/slider_mpg_highway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/slider_mpg_city"
        android:layout_below="@+id/car_picker_title" >
    </FrameLayout>

    <FrameLayout
        android:id="@+id/slider_mpg_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/slider_fuel_size"
        android:layout_below="@+id/slider_mpg_highway" >
    </FrameLayout>

    <FrameLayout
        android:id="@+id/slider_fuel_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slider_mpg_city" >
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/orange"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/slider_fuel_size"/>

    <LinearLayout
        android:id="@+id/LinearLayoutOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slider_fuel_size"
        android:layout_marginTop="7dp"
        android:weightSum="1.01" >

         <Button
            android:id="@+id/button_cancel_car_picker_manual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel" 
            android:textColor="@color/text_silver"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".01"
            android:background="@color/orange" />

        <Button
            android:id="@+id/button_ok_car_picker_manual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/ok"
            android:textColor="@color/text_silver" />
    </LinearLayout>

</RelativeLayout>