<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_gravity="center"
    android:background="@drawable/background_fragment" >


    <TextView
        android:id="@+id/title_fuelguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_remaining"
        android:textColor="@color/text_silver"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"/>

    <SeekBar
        android:id="@+id/seekbar_fuel_guage"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:maxHeight="100dp"
        android:progress="16"
        android:max="16"
        android:progressDrawable="@drawable/progressbar_fuel"
        android:thumb="@drawable/thumb_fuel"
        android:thumbOffset="0dp"
        android:layout_below="@+id/text_fuel_gauge"/>

    <TextView android:id="@+id/text_fuel_gauge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_below="@+id/title_fuelguage"
        android:textColor="@color/text_silver"/>

    <Button
        android:id="@+id/button_minus"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:visibility="gone"
        android:text="--"
        android:background="@drawable/selector_opaque_black"
        android:textColor="@color/text_silver"
        android:layout_below="@id/seekbar_fuel_guage"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"/>


    <LinearLayout
        android:id="@+id/layout_fuel_amount_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/LinearLayoutOptions"
        android:layout_marginBottom="5dp">

        <EditText
            android:id="@+id/edittext_fuel_level"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_silver"
            android:maxLength="6"
            android:layout_marginRight="5dp"
            android:inputType="numberDecimal"
            android:background="@drawable/stroke_orange"/>

        <TextView
            android:id="@+id/label_fuel_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/gal"
            android:textColor="@color/text_silver" />


    </LinearLayout>



    <Button
        android:id="@+id/button_plus"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:visibility="gone"
        android:background="@drawable/selector_opaque_black"
        android:textColor="@color/text_silver"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/seekbar_fuel_guage"
        android:text="+"/>

    <!--<include
        android:id="@+id/layout_button_add_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbar_fuel_guage2"
        android:layout_alignRight="@+id/seekbar_fuel_guage2"
        android:layout_marginBottom="3dp"
        layout="@layout/button_add_sub" /> -->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/orange"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/button_minus"/>

    <LinearLayout
        android:id="@+id/LinearLayoutOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_minus"
        android:layout_marginTop="7dp"
        android:weightSum="1.01" >

        <Button
            android:id="@+id/button_cancel_fuel_reading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel"
            android:textColor="@color/text_silver"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".01"
            android:background="@color/orange" />

        <Button
            android:id="@+id/button_ok_car_fuel_reading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/ok"
            android:textColor="@color/text_silver" />
    </LinearLayout>


</RelativeLayout>
